compiler/testData/diagnostics/tests/subtyping/kt2744.kt
// FIR_IDENTICAL
// !DIAGNOSTICS: -UNUSED_PARAMETER
class X : <!UNRESOLVED_REFERENCE!>S<!>

fun f(l: List<X>) {}
